# anima-zero

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: 00-overview.md
eval/: README.md  eval_chess.py
presentation/: server.py
presentation/web/: .env.example  next.config.mjs  package-lock.json  package.json
presentation/web/app/: globals.css  layout.tsx  page.tsx
presentation/web/app/anima-logs/: page.tsx
presentation/web/app/awi/: page.tsx
presentation/web/components/: AnimaLogsView.tsx  AwiDashboard.tsx  ChatPanel.tsx  ChessModePanel.tsx  SensingArea.tsx  SessionSidebar.tsx  ThemeToggle.tsx
presentation/web/lib/: api.ts
services/: chess_engine_mcp.py
src/: __init__.py  awi.py  awi_log.py  config.py  context.py  intent.py  llm_log.py  mcp_bridge.py  messages.py  orchestrator.py  registry.py  safety.py  session.py  skill.py  world_client.py
src/behavior/: __init__.py  blackboard.py  hitl.py  idioms.py  manager.py  runner.py
src/behavior/trees/: __init__.py  boardgame.py  boardtasks.py
src/llm/: README.md  __init__.py  base.py  claude.py  factory.py  openai_compat.py
src/skills/: __init__.py  boardgame.py
src/tools/: __init__.py
src/tools/boardgame/: __init__.py  _vision.py  base.py  chess.py
tests/: conftest.py  test_anima_logs.py  test_behavior_generic.py  test_boardgame_smoke.py  test_boardtasks.py  test_engine_dualpath.py  test_expand_move.py  test_gomoku.py  test_guidance.py  test_manager.py  test_openai_compat_messages.py  test_orchestrator_loop.py  test_orchestrator_skill.py  test_perceive_robustness.py  test_runtime_pause.py  test_safety_gate.py  test_seating.py  test_state_machine.py  test_vision_roundtrip.py
world/camera/: README.md  awi_mcp.py  capture.py  pyproject.toml  server.py  v4l2_caps.py  world.py
world/camera/web/: index.html
world/computer/: README.md
world/gazebo-chess/: README.md  arm_controller.py  config.py  geometry.py  grasp_pose.py  models.py  pyproject.toml  render.py  server.py  spawn.py  world.py
world/gazebo-chess/web/: index.html
world/sim-chess/: README.md  awi_mcp.py  go.py  gomoku.py  pyproject.toml  render.py  server.py  world.py
world/sim-chess/scripts/: drive_new_framework.py
world/sim-chess/web/: index.html
