[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "anima"
version = "0.1.0"
description = "ANIMA — cognitive framework for intent-to-action embodied AI. Six-layer stack (signal/parser/planner/skill/adapter/assessment) + five-factor self-assessment."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Jeff Liu Lab", email = "contact@jeffliulab.com" },
]
keywords = [
    "cognitive-architecture",
    "embodied-ai",
    "behavior-tree",
    "llm-tool-use",
    "intent-to-action",
    "self-assessment",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.6",
    "py_trees>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/jeffliulab/anima-zero"
"SOMA Zero (body)" = "https://github.com/jeffliulab/soma-zero"

[tool.hatch.build.targets.wheel]
packages = ["src/anima"]

[tool.ruff]
line-length = 100
target-version = "py311"
