[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anima"
version = "0.1.0"
description = "ANIMA — the brain of an embodied robot: an object standard + registry + a generic agent loop. Connects to one object at a time and operates it through vision-capable LLMs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Jeff Liu Lab", email = "contact@jeffliulab.com" },
]
keywords = [
    "embodied-ai",
    "agent",
    "llm-tool-use",
    "object-standard",
    "vision-language-action",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.69",
    "openai>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pillow>=10",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/jeffliulab/anima-zero"
"SOMA Zero (body)" = "https://github.com/jeffliulab/soma-zero"

# 扁平 src/ 映射成 anima 包(不建 src/anima);llm/ 是子包
[tool.setuptools]
package-dir = { "anima" = "src" }
packages = ["anima", "anima.llm"]

[tool.ruff]
line-length = 100
target-version = "py311"
