[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anima"
version = "0.1.0"
description = "ANIMA — the brain of an embodied robot: an object standard + registry + a generic agent loop. Connects to one object at a time and operates it through vision-capable LLMs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Jeff Liu Lab", email = "contact@jeffliulab.com" },
]
keywords = [
    "embodied-ai",
    "agent",
    "llm-tool-use",
    "object-standard",
    "vision-language-action",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.69",
    "openai>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pillow>=10",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",      # 世界客户端(RemoteWorld)直接用;之前仅靠 anthropic/fastapi 传递依赖,现显式声明
    "mcp>=1.2",         # 官方 MCP SDK：大脑作 MCP host/client 连世界/引擎(v0.4 接口采标 MCP);先钉 v1.x
    "chess>=1.10",      # python-chess: 棋种策略用(规则/FEN/终局);引擎合法性也靠它
    "py-trees>=2.2",    # 行为树(对弈循环层)
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",      # 自动化回归测试(视觉 round-trip + 对弈冒烟)
]

[project.urls]
Homepage = "https://github.com/jeffliulab/anima-zero"
"SOMA Zero (body)" = "https://github.com/jeffliulab/soma-zero"

# 扁平 src/ 映射成 anima 包(不建 src/anima);llm/ skills/ behavior/ tools/ 是子包
[tool.setuptools]
package-dir = { "anima" = "src" }
packages = [
    "anima", "anima.llm", "anima.skills",
    "anima.behavior", "anima.behavior.trees",
    "anima.tools", "anima.tools.boardgame",
]

[tool.ruff]
line-length = 100
target-version = "py311"
