[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-chess"
version = "0.1.0"
description = "sim-chess —— ANIMA 的一个独立『世界』：仿真棋盘 + 内置棋手，通过标准 MCP 被观测和操作；对大脑只有 move、只给画面、不给真值"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pillow>=10",
    "pydantic>=2.6",
    "chess>=1.10",
    "mcp>=1.2",         # 世界作 MCP server 暴露 AWI(tools/resources/prompts);挂在 /mcp
]

[tool.setuptools]
py-modules = ["server", "world", "render", "awi_mcp"]
